--- a/gramar_of_graphics2.html
+++ b/gramar_of_graphics2.html
@@ -98,62 +98,62 @@ tickers
 ```
 
 ```
-##   [1] "AAPL"  "MSFT"  "AMZN"  "GOOGL" "BRK.B" "TSLA"  "GOOG"  "UNH"   "XOM"  
-##  [10] "JNJ"   "NVDA"  "JPM"   "PG"    "CVX"   "V"     "HD"    "MA"    "LLY"  
-##  [19] "BAC"   "PFE"   "ABBV"  "META"  "MRK"   "PEP"   "KO"    "COST"  "TMO"  
-##  [28] "AVGO"  "WMT"   "MCD"   "CSCO"  "ACN"   "ABT"   "WFC"   "DHR"   "DIS"  
-##  [37] "COP"   "LIN"   "TXN"   "NEE"   "BMY"   "VZ"    "ADBE"  "CRM"   "AMGN" 
-##  [46] "CMCSA" "PM"    "HON"   "RTX"   "QCOM"  "UNP"   "T"     "NKE"   "LOW"  
-##  [55] "GS"    "UPS"   "IBM"   "NFLX"  "CVS"   "INTC"  "CAT"   "MS"    "SPGI" 
-##  [64] "SCHW"  "ORCL"  "ELV"   "AMD"   "BLK"   "INTU"  "DE"    "SBUX"  "MDT"  
-##  [73] "LMT"   "PLD"   "PYPL"  "AMT"   "ADP"   "GILD"  "BA"    "C"     "AMAT" 
-##  [82] "ISRG"  "GE"    "AXP"   "CI"    "MDLZ"  "TMUS"  "TJX"   "EOG"   "CB"   
-##  [91] "ADI"   "MMC"   "NOW"   "TGT"   "BKNG"  "MO"    "REGN"  "VRTX"  "SLB"  
-## [100] "SYK"   "PGR"   "MMM"   "DUK"   "NOC"   "ZTS"   "SO"    "MU"    "LRCX" 
-## [109] "CSX"   "PNC"   "HUM"   "BDX"   "ETN"   "FISV"  "ITW"   "APD"   "TFC"  
-## [118] "CL"    "CME"   "AON"   "PXD"   "USB"   "CCI"   "BSX"   "MPC"   "EQIX" 
-## [127] "GM"    "WM"    "NSC"   "ICE"   "MRNA"  "F"     "EMR"   "DG"    "SHW"  
-## [136] "OXY"   "GD"    "FCX"   "KLAC"  "PSX"   "ATVI"  "VLO"   "EL"    "ADM"  
-## [145] "ORLY"  "D"     "MCK"   "SNPS"  "MET"   "ADSK"  "MCO"   "SRE"   "HCA"  
-## [154] "DVN"   "APH"   "CNC"   "AZO"   "PSA"   "CTVA"  "EW"    "ROP"   "AEP"  
-## [163] "GIS"   "AIG"   "CDNS"  "JCI"   "DXCM"  "MAR"   "COF"   "NXPI"  "A"    
-## [172] "CHTR"  "TRV"   "SYY"   "KMB"   "LHX"   "IQV"   "BIIB"  "CMG"   "MCHP" 
-## [181] "FDX"   "MSI"   "WMB"   "MSCI"  "PRU"   "TT"    "AFL"   "HES"   "O"    
-## [190] "FIS"   "TEL"   "ENPH"  "PH"    "STZ"   "SPG"   "AJG"   "EXC"   "HLT"  
-## [199] "PAYX"  "ECL"   "CTAS"  "DOW"   "MNST"  "ALB"   "ILMN"  "CARR"  "KMI"  
-## [208] "NEM"   "IDXX"  "FTNT"  "XEL"   "NUE"   "AMP"   "ALL"   "DD"    "PCAR" 
-## [217] "YUM"   "CMI"   "DLTR"  "EA"    "HAL"   "ROST"  "WELL"  "CSGP"  "MTD"  
-## [226] "BK"    "ON"    "OTIS"  "RMD"   "TDG"   "HSY"   "SBAC"  "DLR"   "AME"  
-## [235] "KDP"   "ANET"  "ROK"   "BKR"   "ED"    "KEYS"  "VICI"  "KR"    "PPG"  
-## [244] "CTSH"  "TROW"  "APTV"  "CEG"   "DFS"   "FAST"  "KHC"   "STT"   "WBA"  
-## [253] "FANG"  "MTB"   "PEG"   "WEC"   "GPN"   "ODFL"  "OKE"   "VRSK"  "HPQ"  
-## [262] "BAX"   "ES"    "RSG"   "DHI"   "GWW"   "IT"    "AWK"   "GLW"   "CPRT" 
-## [271] "WBD"   "WTW"   "EBAY"  "IFF"   "CBRE"  "GPC"   "FITB"  "CDW"   "WY"   
-## [280] "URI"   "FTV"   "RJF"   "ZBH"   "HIG"   "ABC"   "FRC"   "VMC"   "PCG"  
-## [289] "EFX"   "TSCO"  "AVB"   "LYB"   "CTRA"  "EIX"   "LH"    "NDAQ"  "LUV"  
-## [298] "DAL"   "LEN"   "ETR"   "ULTA"  "MLM"   "ARE"   "MRO"   "IR"    "ANSS" 
-## [307] "RF"    "PFG"   "DTE"   "HBAN"  "AEE"   "EQR"   "EXR"   "MKC"   "EPAM" 
-## [316] "ACGL"  "FE"    "CAH"   "CF"    "PWR"   "CFG"   "PPL"   "DOV"   "XYL"  
-## [325] "WAT"   "HPE"   "TSN"   "NTRS"  "SYF"   "TDY"   "HOLX"  "AES"   "INVH" 
-## [334] "MOH"   "WST"   "WAB"   "KEY"   "EXPD"  "MAA"   "MOS"   "CNP"   "CHD"  
-## [343] "PKI"   "VTR"   "VRSN"  "BALL"  "DGX"   "CINF"  "AMCR"  "MPWR"  "K"    
-## [352] "IEX"   "DRI"   "CLX"   "STE"   "CMS"   "ABMD"  "CAG"   "TRGP"  "NTAP" 
-## [361] "PAYC"  "J"     "BR"    "TTWO"  "SEDG"  "ALGN"  "APA"   "OMC"   "COO"  
-## [370] "FMC"   "FDS"   "EQT"   "TRMB"  "SWKS"  "JBHT"  "EXPE"  "ATO"   "SJM"  
-## [379] "IRM"   "TER"   "AVY"   "BBY"   "TXT"   "FLT"   "AKAM"  "ETSY"  "GRMN" 
-## [388] "MTCH"  "INCY"  "UAL"   "WRB"   "LVS"   "LKQ"   "LDOS"  "POOL"  "NVR"  
-## [397] "ESS"   "PTC"   "HWM"   "HRL"   "VTRS"  "SIVB"  "ZBRA"  "KIM"   "PEAK" 
-## [406] "TECH"  "EVRG"  "LNT"   "IP"    "GEN"   "TYL"   "DPZ"   "BRO"   "HST"  
-## [415] "RCL"   "NDSN"  "JKHY"  "IPG"   "BF.B"  "SNA"   "SWK"   "WDC"   "CRL"  
-## [424] "CPT"   "PKG"   "RE"    "CHRW"  "CBOE"  "KMX"   "MGM"   "UDR"   "LW"   
-## [433] "MAS"   "AAP"   "STX"   "CZR"   "CE"    "EMN"   "L"     "LYV"   "HSIC" 
-## [442] "BXP"   "VFC"   "NRG"   "MKTX"  "NI"    "PHM"   "TFX"   "BWA"   "ALLE" 
-## [451] "CCL"   "CDAY"  "QRVO"  "REG"   "GL"    "CPB"   "JNPR"  "TAP"   "CMA"  
-## [460] "WRK"   "AAL"   "PARA"  "FOXA"  "BIO"   "ROL"   "HII"   "IVZ"   "SBNY" 
-## [469] "FFIV"  "RHI"   "TPR"   "FBHS"  "WHR"   "CTLT"  "UHS"   "ZION"  "BBWI" 
-## [478] "WYNN"  "HAS"   "PNW"   "AOS"   "PNR"   "SEE"   "FRT"   "BEN"   "NCLH" 
-## [487] "GNRC"  "NWSA"  "XRAY"  "AIZ"   "DXC"   "OGN"   "ALK"   "LUMN"  "MHK"  
-## [496] "LNC"   "NWL"   "RL"    "FOX"   "DISH"  "VNO"   "DVA"   "NWS"
+##   [1] "AAPL"  "MSFT"  "AMZN"  "GOOGL" "BRK.B" "GOOG"  "UNH"   "TSLA"  "XOM"  
+##  [10] "JNJ"   "JPM"   "NVDA"  "V"     "PG"    "CVX"   "HD"    "MA"    "LLY"  
+##  [19] "ABBV"  "PFE"   "MRK"   "BAC"   "META"  "PEP"   "KO"    "COST"  "WMT"  
+##  [28] "TMO"   "AVGO"  "MCD"   "CSCO"  "ABT"   "ACN"   "WFC"   "DHR"   "DIS"  
+##  [37] "LIN"   "BMY"   "COP"   "NEE"   "VZ"    "TXN"   "ADBE"  "AMGN"  "CMCSA"
+##  [46] "PM"    "CRM"   "HON"   "RTX"   "QCOM"  "T"     "LOW"   "IBM"   "NKE"  
+##  [55] "UNP"   "UPS"   "GS"    "NFLX"  "CVS"   "INTC"  "CAT"   "SCHW"  "ORCL" 
+##  [64] "MS"    "ELV"   "AMD"   "SPGI"  "DE"    "LMT"   "SBUX"  "BLK"   "MDT"  
+##  [73] "INTU"  "ADP"   "PLD"   "GILD"  "AMT"   "PYPL"  "CI"    "BA"    "C"    
+##  [82] "ISRG"  "GE"    "TJX"   "AXP"   "AMAT"  "TMUS"  "MDLZ"  "CB"    "ADI"  
+##  [91] "MMC"   "EOG"   "VRTX"  "NOW"   "MO"    "REGN"  "BKNG"  "NOC"   "TGT"  
+## [100] "SLB"   "SYK"   "PGR"   "DUK"   "MMM"   "SO"    "ZTS"   "HUM"   "CSX"  
+## [109] "PNC"   "ETN"   "APD"   "MU"    "BDX"   "ITW"   "CL"    "FISV"  "AON"  
+## [118] "LRCX"  "CME"   "BSX"   "MRNA"  "WM"    "MPC"   "TFC"   "PXD"   "EQIX" 
+## [127] "USB"   "CCI"   "DG"    "ICE"   "NSC"   "GM"    "SHW"   "GD"    "EMR"  
+## [136] "F"     "VLO"   "EL"    "ORLY"  "ADM"   "KLAC"  "MCK"   "OXY"   "ATVI" 
+## [145] "PSX"   "FCX"   "MET"   "SNPS"  "HCA"   "SRE"   "D"     "GIS"   "AZO"  
+## [154] "CNC"   "APH"   "CTVA"  "AEP"   "EW"    "PSA"   "JCI"   "MCO"   "ROP"  
+## [163] "ADSK"  "DVN"   "AIG"   "CDNS"  "NXPI"  "DXCM"  "KMB"   "MAR"   "BIIB" 
+## [172] "MSI"   "TRV"   "A"     "SYY"   "LHX"   "ENPH"  "CMG"   "FDX"   "CHTR" 
+## [181] "TT"    "AJG"   "MCHP"  "AFL"   "WMB"   "TEL"   "O"     "PRU"   "IQV"  
+## [190] "HES"   "MSCI"  "STZ"   "PH"    "CTAS"  "SPG"   "MNST"  "PAYX"  "EXC"  
+## [199] "HLT"   "COF"   "ROST"  "FIS"   "NUE"   "XEL"   "CARR"  "ECL"   "KMI"  
+## [208] "DOW"   "ALL"   "PCAR"  "NEM"   "AMP"   "YUM"   "CMI"   "DD"    "DLTR" 
+## [217] "IDXX"  "EA"    "ILMN"  "FTNT"  "ANET"  "HSY"   "ED"    "HAL"   "BK"   
+## [226] "RMD"   "OTIS"  "ALB"   "TDG"   "CSGP"  "AME"   "KDP"   "DLR"   "KR"   
+## [235] "MTD"   "WELL"  "ON"    "SBAC"  "CTSH"  "VICI"  "KEYS"  "ROK"   "KHC"  
+## [244] "PPG"   "CEG"   "MTB"   "WEC"   "BKR"   "FAST"  "DFS"   "APTV"  "PEG"  
+## [253] "OKE"   "WBA"   "FANG"  "BAX"   "ES"    "TROW"  "RSG"   "STT"   "ODFL" 
+## [262] "CPRT"  "VRSK"  "GPN"   "GWW"   "HPQ"   "IT"    "AWK"   "DHI"   "GLW"  
+## [271] "GPC"   "WTW"   "ABC"   "EBAY"  "CDW"   "IFF"   "TSCO"  "URI"   "EFX"  
+## [280] "FITB"  "CBRE"  "WY"    "PCG"   "HIG"   "FTV"   "WBD"   "ZBH"   "RJF"  
+## [289] "VMC"   "AVB"   "EIX"   "ULTA"  "ETR"   "LUV"   "FRC"   "ARE"   "NDAQ" 
+## [298] "MLM"   "DTE"   "AEE"   "DAL"   "LEN"   "IR"    "HBAN"  "EQR"   "RF"   
+## [307] "CAH"   "CTRA"  "PWR"   "ANSS"  "PFG"   "ACGL"  "EXR"   "LYB"   "FE"   
+## [316] "MRO"   "LH"    "MKC"   "PPL"   "HPE"   "CF"    "XYL"   "DOV"   "CFG"  
+## [325] "EPAM"  "WAT"   "TSN"   "NTRS"  "TDY"   "CNP"   "CHD"   "MOH"   "EXPD" 
+## [334] "HOLX"  "AES"   "INVH"  "VRSN"  "MAA"   "DRI"   "WAB"   "CLX"   "K"    
+## [343] "AMCR"  "IEX"   "VTR"   "BALL"  "SYF"   "CMS"   "KEY"   "CAG"   "PKI"  
+## [352] "DGX"   "CINF"  "ABMD"  "SEDG"  "MOS"   "MPWR"  "BR"    "STE"   "WST"  
+## [361] "FDS"   "NTAP"  "TRGP"  "J"     "FMC"   "ATO"   "OMC"   "SJM"   "TTWO" 
+## [370] "AVY"   "APA"   "SWKS"  "PAYC"  "IRM"   "JBHT"  "COO"   "EQT"   "WRB"  
+## [379] "TXT"   "EXPE"  "TER"   "BBY"   "LDOS"  "TRMB"  "AKAM"  "INCY"  "ETSY" 
+## [388] "LVS"   "FLT"   "ALGN"  "HRL"   "LKQ"   "GRMN"  "UAL"   "LNT"   "HWM"  
+## [397] "JKHY"  "ESS"   "NVR"   "KIM"   "EVRG"  "ZBRA"  "DPZ"   "BRO"   "VTRS" 
+## [406] "PEAK"  "MTCH"  "GEN"   "SIVB"  "PTC"   "IP"    "HST"   "IPG"   "RCL"  
+## [415] "CBOE"  "POOL"  "RE"    "TYL"   "TECH"  "SNA"   "BF.B"  "NDSN"  "CPT"  
+## [424] "PKG"   "LW"    "CRL"   "CHRW"  "MGM"   "UDR"   "SWK"   "WDC"   "MAS"  
+## [433] "L"     "HSIC"  "KMX"   "NI"    "STX"   "CZR"   "VFC"   "CPB"   "EMN"  
+## [442] "GL"    "QRVO"  "JNPR"  "CE"    "TFX"   "BWA"   "TAP"   "ALLE"  "CDAY" 
+## [451] "BXP"   "REG"   "NRG"   "PHM"   "MKTX"  "FOXA"  "PARA"  "LYV"   "ROL"  
+## [460] "WRK"   "CCL"   "CMA"   "HII"   "AAL"   "AAP"   "FFIV"  "BBWI"  "TPR"  
+## [469] "IVZ"   "UHS"   "BIO"   "FBHS"  "RHI"   "PNW"   "SBNY"  "WHR"   "WYNN" 
+## [478] "AOS"   "CTLT"  "ZION"  "HAS"   "SEE"   "FRT"   "PNR"   "BEN"   "NWSA" 
+## [487] "NCLH"  "XRAY"  "AIZ"   "DXC"   "GNRC"  "OGN"   "LNC"   "ALK"   "LUMN" 
+## [496] "MHK"   "NWL"   "RL"    "FOX"   "DVA"   "DISH"  "VNO"   "NWS"
 ```
 
 ---
@@ -177,16 +177,16 @@ tq_index("SP500")
 ## # A tibble: 503 × 8
 ##    symbol company      identifier sedol weight sector shares_held local_currency
 ##    &lt;chr&gt;  &lt;chr&gt;        &lt;chr&gt;      &lt;chr&gt;  &lt;dbl&gt; &lt;chr&gt;        &lt;dbl&gt; &lt;chr&gt;         
-##  1 AAPL   Apple Inc.   03783310   2046… 0.0674 Infor…   169742220 USD           
-##  2 MSFT   Microsoft C… 59491810   2588… 0.0549 Infor…    83799320 USD           
-##  3 AMZN   Amazon.com … 02313510   2000… 0.0266 Consu…    99611430 USD           
-##  4 GOOGL  Alphabet In… 02079K30   BYVY… 0.0172 Commu…    67388056 USD           
-##  5 BRK-B  Berkshire H… 08467070   2073… 0.0167 Finan…    20279520 USD           
-##  6 TSLA   Tesla Inc    88160R10   B616… 0.0156 Consu…    29934360 USD           
-##  7 GOOG   Alphabet In… 02079K10   BYY8… 0.0155 Commu…    60260212 USD           
-##  8 UNH    UnitedHealt… 91324P10   2917… 0.0146 Healt…    10512570 USD           
-##  9 XOM    Exxon Mobil… 30231G10   2326… 0.0142 Energy    46839410 USD           
-## 10 JNJ    Johnson &amp; J… 47816010   2475… 0.0133 Healt…    29548444 USD           
+##  1 AAPL   Apple Inc.   03783310   2046… 0.0686 Infor…   170171920 USD           
+##  2 MSFT   Microsoft C… 59491810   2588… 0.0540 Infor…    84011430 USD           
+##  3 AMZN   Amazon.com … 02313510   2000… 0.0250 Consu…    99863530 USD           
+##  4 GOOGL  Alphabet In… 02079K30   BYVY… 0.0175 Commu…    67558600 USD           
+##  5 BRK-B  Berkshire H… 08467070   2073… 0.0168 Finan…    20330832 USD           
+##  6 GOOG   Alphabet In… 02079K10   BYY8… 0.0157 Commu…    60412708 USD           
+##  7 UNH    UnitedHealt… 91324P10   2917… 0.0149 Healt…    10539162 USD           
+##  8 TSLA   Tesla Inc    88160R10   B616… 0.0144 Consu…    30010104 USD           
+##  9 XOM    Exxon Mobil… 30231G10   2326… 0.0140 Energy    46957970 USD           
+## 10 JNJ    Johnson &amp; J… 47816010   2475… 0.0139 Healt…    29623228 USD           
 ## # … with 493 more rows
 ```
 
@@ -203,7 +203,7 @@ getSymbols(tq_index("SP500")$symbol[1:6], from = '2021-11-14',
 ```
 
 ```
-## [1] "AAPL"  "MSFT"  "AMZN"  "GOOGL" "BRK-B" "TSLA"
+## [1] "AAPL"  "MSFT"  "AMZN"  "GOOGL" "BRK-B" "GOOG"
 ```
 
 
@@ -228,16 +228,16 @@ tq_index("SP500")
 ## # A tibble: 503 × 8
 ##    symbol company      identifier sedol weight sector shares_held local_currency
 ##    &lt;chr&gt;  &lt;chr&gt;        &lt;chr&gt;      &lt;chr&gt;  &lt;dbl&gt; &lt;chr&gt;        &lt;dbl&gt; &lt;chr&gt;         
-##  1 AAPL   Apple Inc.   03783310   2046… 0.0674 Infor…   169742220 USD           
-##  2 MSFT   Microsoft C… 59491810   2588… 0.0549 Infor…    83799320 USD           
-##  3 AMZN   Amazon.com … 02313510   2000… 0.0266 Consu…    99611430 USD           
-##  4 GOOGL  Alphabet In… 02079K30   BYVY… 0.0172 Commu…    67388056 USD           
-##  5 BRK-B  Berkshire H… 08467070   2073… 0.0167 Finan…    20279520 USD           
-##  6 TSLA   Tesla Inc    88160R10   B616… 0.0156 Consu…    29934360 USD           
-##  7 GOOG   Alphabet In… 02079K10   BYY8… 0.0155 Commu…    60260212 USD           
-##  8 UNH    UnitedHealt… 91324P10   2917… 0.0146 Healt…    10512570 USD           
-##  9 XOM    Exxon Mobil… 30231G10   2326… 0.0142 Energy    46839410 USD           
-## 10 JNJ    Johnson &amp; J… 47816010   2475… 0.0133 Healt…    29548444 USD           
+##  1 AAPL   Apple Inc.   03783310   2046… 0.0686 Infor…   170171920 USD           
+##  2 MSFT   Microsoft C… 59491810   2588… 0.0540 Infor…    84011430 USD           
+##  3 AMZN   Amazon.com … 02313510   2000… 0.0250 Consu…    99863530 USD           
+##  4 GOOGL  Alphabet In… 02079K30   BYVY… 0.0175 Commu…    67558600 USD           
+##  5 BRK-B  Berkshire H… 08467070   2073… 0.0168 Finan…    20330832 USD           
+##  6 GOOG   Alphabet In… 02079K10   BYY8… 0.0157 Commu…    60412708 USD           
+##  7 UNH    UnitedHealt… 91324P10   2917… 0.0149 Healt…    10539162 USD           
+##  8 TSLA   Tesla Inc    88160R10   B616… 0.0144 Consu…    30010104 USD           
+##  9 XOM    Exxon Mobil… 30231G10   2326… 0.0140 Energy    46957970 USD           
+## 10 JNJ    Johnson &amp; J… 47816010   2475… 0.0139 Healt…    29623228 USD           
 ## # … with 493 more rows
 ```
 
@@ -267,7 +267,7 @@ intersect(tickers, ls())
 ```
 
 ```
-## [1] "AAPL"  "MSFT"  "AMZN"  "GOOGL" "TSLA"
+## [1] "AAPL"  "MSFT"  "AMZN"  "GOOGL" "GOOG"
 ```
 
 ---
@@ -293,7 +293,7 @@ intersect(tickers, ls()) %&gt;%
 ## 2 MSFT    &lt;xts [251 × 6]&gt;
 ## 3 AMZN    &lt;xts [251 × 6]&gt;
 ## 4 GOOGL   &lt;xts [251 × 6]&gt;
-## 5 TSLA    &lt;xts [251 × 6]&gt;
+## 5 GOOG    &lt;xts [251 × 6]&gt;
 ```
 
 ---
@@ -317,7 +317,7 @@ intersect(tickers, ls()) %&gt;%
 ## 2 MSFT    &lt;xts [251 × 6]&gt;
 ## 3 AMZN    &lt;xts [251 × 6]&gt;
 ## 4 GOOGL   &lt;xts [251 × 6]&gt;
-## 5 TSLA    &lt;xts [251 × 6]&gt;
+## 5 GOOG    &lt;xts [251 × 6]&gt;
 ```
 
 `xts` is a special format, where the time is name of the row. Let's convert it into a tidy data.frame (and some more cleaning)
