--- a/introduction-to-statistics.html
+++ b/introduction-to-statistics.html
@@ -507,7 +507,7 @@ Values that divide the observations into equal groups.
 
 --
 
-### Step 2. Find the values. 🤣
+### Step 2. Find the values. 😄
 
 --
 
