--- a/tidyverse.html
+++ b/tidyverse.html
@@ -81,10 +81,10 @@ text-decoration: line-through;
 
 3. Variance analysis
 
-### Session 2 - Introduction to .fullprice[Multi]Tidyverse 🌏
+### Session 2 - Introduction to .fullprice[Multi]Tidyverse 🌎
 
 
-2. {dplyr} 🏺
+2. {dplyr} 🔍
 
 3. {tidyr} 🧹
 
@@ -136,23 +136,6 @@ Tidyverse works similarly to any other package, but when activated, **8 packages
 
 ```r
 library(tidyverse)
-```
-
-```
-## ── Attaching packages ─────────────────────────────────────── tidyverse 1.3.1 ──
-```
-
-```
-## ✔ ggplot2 3.3.6     ✔ purrr   0.3.4
-## ✔ tibble  3.1.7     ✔ dplyr   1.0.9
-## ✔ tidyr   1.2.0     ✔ stringr 1.4.1
-## ✔ readr   2.1.2     ✔ forcats 0.5.1
-```
-
-```
-## ── Conflicts ────────────────────────────────────────── tidyverse_conflicts() ──
-## ✖ dplyr::filter() masks stats::filter()
-## ✖ dplyr::lag()    masks stats::lag()
 ```
 ---
 
@@ -1708,9 +1691,9 @@ mutate(
 
 ---
 
-# Example
+### Example
 
-Assing it with the same name (re-write the table)
+Assign it with the same name (re-write the table)
 
 
 ```r
@@ -1736,7 +1719,7 @@ mutate(
 
 ---
 
-# Example
+### Example
 
 Let's transform fertility_df to a similar format
 
@@ -1793,8 +1776,6 @@ Using the `full_join` fn a message appeared: `Joining, by = c("geo", "TIME")`. T
 - right_join(): includes all rows in y.
 
 - full_join(): includes all rows in x or y.
-
----
 
 ---
 
