--- a/tidyverse2.html
+++ b/tidyverse2.html
@@ -108,7 +108,7 @@ background-size: contain
 
 &gt; All functions in stringr start with `str_` and take a **vector of strings as the first argument**.
 
-This makes it easy to find the string manipulation function you need 😃
+This makes it easy to find the string manipulation function you need 😆
 
 --
 
@@ -568,7 +568,7 @@ list.files()
 
 ```
 ##  [1] "clt_meme.jpg"                        "daily-inflation-online.csv"         
-##  [3] "inflation-expectations-forecast.csv" "meme_assumption Közepes.jpeg"       
+##  [3] "inflation-expectations-forecast.csv" "meme_assumption.jpg"                
 ##  [5] "meme_assumption.png"                 "meme_estimate.png"                  
 ##  [7] "purrr.png"                           "stringr.png"                        
 ##  [9] "strings - 01.jpg"                    "strings - 02.jpg"
